# todo-rust

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  cloud-deploy.sh  deploy-container.sh  diesel.toml
migrations/2023-03-13-000627_create_todo/: down.sql  up.sql
src/: auth.rs  config.rs  cors.rs  lib.rs  main.rs  schema.rs
src/adapter/driven/persistence/: mod.rs  todo_repository_pgsql.rs  user_repository_pgsql.rs
src/adapter/driven/persistence/pgsql/: db.rs  mod.rs  schema.rs  tag_repository.rs  todo_repository.rs  user_repository.rs
src/adapter/driven/persistence/pgsql/migrations/2023-03-13-000627_create_todo/: down.sql  up.sql
src/adapter/driven/persistence/pgsql/models/: todo.rs  user.rs
src/adapter/driving/web/: mod.rs  token.rs
src/adapter/driving/web/models/: mod.rs  user.rs
src/adapter/driving/web/routes/: todo.rs  user.rs
src/adapter/driving/web/schemas/: mod.rs  todo.rs  user.rs
src/application/: mod.rs
src/application/port/driven/: errors.rs  mod.rs  tag_repository.rs  todo_repository.rs  user_repository.rs
src/application/use_cases/: create_todo.rs  create_user.rs  delete_todo.rs  delete_todos_by_tag.rs  delete_todos_done.rs  find_todo.rs  find_todos.rs  find_user.rs  get_user_info.rs  is_user_exist.rs  login_user.rs  mod.rs  todo_add_tag.rs  todo_remove_tag.rs  update_todo.rs
src/database/: todo.rs
src/db/: mod.rs  tag.rs  todo.rs  user.rs
src/domain/: auth.rs  mod.rs  tag.rs  todo.rs  user.rs
src/models/: mod.rs  tag.rs  todo.rs  todo_tag.rs  user.rs
src/routes/: admin.rs  todo.rs  user.rs
src/services/: mod.rs
tests/: login.rs  register.rs  tag.rs  todo.rs
