[package]
name = "todo-rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
serde = "1.0.152"
diesel_derives = "2.0.1"
chrono = { version = "0.4.24", features = ["serde"] }
argon2 = "0.5.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
