[package]
name = "todo-rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
toml = "0.7.1"
serde = { version = "1.0.146", features = ["derive"] }
argon2 = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "8.3.0"
