[package]
name = "todo-rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
chrono = { version = "0.4.24", features = ["serde"] }
toml = "0.7.1"
serde = "1.0.152"
serde_json = "1.0"
argon2 = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "8.3.0"
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
diesel_derives = "2.0.1"
dotenvy = "0.15"
dotenv = "0.15.0"